--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#A700FF</color>
+    <color name="colorPrimaryDark">#009BFC</color>
+    <color name="colorAccent">#FF4081</color>
+
+    <color name="black">#000</color>
+    <color name="white">#fff</color>
+    <color name="textTabLight">#5E35B1</color>
+    <color name="textTabBright">#1E88E5</color>
+    <color name="lightGrey">#A9A9A9</color>
+
+    <color name="chatBackground">#dae2de</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
