--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,71 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:orientation="vertical"
     tools:context=".HomeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:id="@+id/loder"
+        android:gravity="center_horizontal|center_vertical"
+        android:layout_height="match_parent">
 
-        android:id="@+id/tab_layout"
-        android:weightSum="2">
-
-        <TextView
-            android:id="@+id/upcominglaunches"
+        <pl.droidsonroids.gif.GifImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upcoming"
-            android:textSize="18sp"
-            android:textAllCaps="true"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:padding="10sp"
-            android:textColor="@color/textTabBright"
-            android:layout_weight="1"/>
-
-        <TextView
-            android:id="@+id/pastlaunches"
-            android:layout_width="match_parent"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:padding="10sp"
-            android:textAllCaps="true"
-            android:textAlignment="center"
-            android:textColor="@color/textTabLight"
-            android:layout_height="wrap_content"
-            android:text="Previous"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:background="@drawable/loder"
             />
-        <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textSize="16sp"-->
-        <!--android:padding="15sp"-->
-        <!--android:textColor="@color/textTabLight"-->
-        <!--android:id="@+id/notifications"-->
-        <!--android:text="Notifications"/>-->
 
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
-        app:cardCornerRadius="15dp">
+        android:layout_height="wrap_content">
+
+    </androidx.appcompat.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:background="#32FFFFFF"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/tab_layout"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/upcominglaunches"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Upcoming"
+                android:textSize="18sp"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:padding="10sp"
+                android:textColor="@color/textTabBright"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/pastlaunches"
+                android:layout_width="match_parent"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:padding="10sp"
+                android:textAllCaps="true"
+                android:textAlignment="center"
+                android:textColor="@color/textTabLight"
+                android:layout_height="wrap_content"
+                android:text="Previous"
+                android:layout_weight="1"
+                />
+        </LinearLayout>
+
         <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#00000000"
             android:layout_below="@+id/tab_layout"
             android:id="@+id/mainPager">
         </androidx.viewpager.widget.ViewPager>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
-
-</RelativeLayout>
+</LinearLayout>
