--- a/app/src/main/res/layout/fragment_past.xml
+++ b/app/src/main/res/layout/fragment_past.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
-    android:layout_height="match_parent"
+<FrameLayout android:layout_width="match_parent"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_margin="10dp"
+android:layout_height="match_parent"
+    android:background="@android:color/transparent"
+xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context=".launches.view.fragments.PastFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:id="@+id/pastrv"/>
 
 </FrameLayout>
